--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,3 @@
-1.0.1 kochwords -  reloading of previous hiscore
+1.1.0 kochwords - avoids repetition, optional weight of recent words
+1.0.1 kochwords - reloading of previous hiscore
 1.0.0 first release
